--- a/index.html
+++ b/index.html
@@ -365,6 +365,12 @@
                         type="email">
                     </div>
                   </div>
+                  <div id="captchaWarn">
+                    <p>Please complete the captcha first</p>
+                  </div>
+                  <div id="captchaComplete">
+                    <p>Captcha completed!</p>
+                  </div>
                   <button id="button2" type="submit" value="Submit" class="click-btn bbtns d-block mt-20 w-100">Subcribe</button>
                   <div class="captchaWrap">
                     <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"
@@ -485,12 +491,14 @@
     <script>
       $(window).on('load', function () {
         document.getElementById("button2").disabled = true;
+        document.getElementById("captchaComplete").style.visibility = "hidden";
       });
       </script>
 
       <script>
         function enableBtn(){
           document.getElementById("button2").disabled = false;
+          document.getElementById("captchaWarn").style.visibility = "hidden";
         }
       </script>
 </body>
