--- a/localActivities.html
+++ b/localActivities.html
@@ -125,6 +125,7 @@
 
     .pic-individual {
       padding-bottom: 2em;
+      width: 639px;
     }
 
     .captchaWrap {
@@ -182,9 +183,9 @@
   </header>
   <!--================Header Menu Area =================-->
 
+  <main class="site-main bodyCustom">
 
-  <div class="bodyCustom">
-    <div class="container">
+    <div class="container center">
       <h1>Local Activities</h1>
       <div class="row">
         <div class="col-lg-12">
@@ -196,17 +197,16 @@
 
     <div class="container">
       <h1 class="center">Eagle Creek Lodge is the perfect place to stay for local activities!</h1>
-      <div class="row padBot">
-        <div class="col-lg-6">
-          <h2 class="card pad1 margin-card">Located 12 miles from Penn State Campus</h2>
-        </div>
-        <div class="col-lg-6">
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 nails pic-individual">
+          <img class="img-responsive" src="img/localActivities/mosh.jpg" alt="Moshannon">
           <h2 class="card pad1 margin-card">10 miles from Black Moshannon state park</h2>
         </div>
-        <div class="col-lg-6">
-          <h2 class="card pad1 margin-card">Plan your retreats at scenic Bald Eagle Valley</h2>
-        </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 nails pic-individual">
+          <img class="img-responsive" src="img\localActivities\ArtsFest2.jpg" alt="artsfest">
           <h2 class="card pad1 margin-card">Plan your stay for arts fest!</h2>
         </div>
       </div>
@@ -215,27 +215,17 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 nails pic-individual">
-          <img class="img-responsive" src="img/localActivities/mosh.jpg" alt="Moshannon">
+          <img class="img-responsive" src="img\localActivities\campus2.jpg" alt="campus">
+          <h2 class="card pad1 margin-card">Located 12 miles from Penn State Campus</h2>
         </div>
         <div class="col-lg-6 nails pic-individual">
-          <img class="img-responsive" src="img\localActivities\ArtsFest2.jpg" alt="artsfest">
+          <img class="img-responsive" src="img\localActivities\bald.jpg" alt="baldEagle">
+          <h2 class="card pad1 margin-card">Plan your retreats at scenic Bald Eagle Valley</h2>
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 nails pic-individual">
-          <img class="img-responsive" src="img\localActivities\campus2.jpg" alt="Moshannon">
-        </div>
-        <div class="col-lg-6 nails pic-individual">
-          <img class="img-responsive" src="img\localActivities\bald.jpg" alt="artsfest">
-        </div>
-      </div>
-    </div>
-  </div>
-
-
+  </main>
   <!--================ Start Footer Area =================-->
   <footer class="footer-area section-padding">
     <div class="container">
