--- a/index.html
+++ b/index.html
@@ -99,6 +99,32 @@
     .captchaWrap {
       padding-top: 2em;
     }
+
+    .black1 {
+      color: black;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    .aboutText{
+      font-size: 1.5em;
+    }
+
+    .pad-bottom1 {
+      padding-bottom: 2em;
+    }
+
+    .center{
+      text-align: center;
+    }
+
+    .margin-bot{
+      margin-bottom: 2em;
+    }
+
   </style>
 </head>
 
@@ -334,7 +360,28 @@
       </div>
     </section>
     <!--================ slider end =================-->
-
+    <!--WEDDINGS-->
+    <div class="container pad-bottom1">
+      <h1 class="center">Plan your wedding with us!</h1>
+    <div class="row">
+      <div class="col-lg-6">
+        <p class="black1 aboutText">
+          You can have your ideal wedding at Eagle Creek Lodge! Enjoy a unique and rustic barn wedding experience with us. Surrounded by 8 acres of scenic land, you and your guests will have plenty of outdoor activities to entertain yourselves. Not to mention the barn itself which is perfect for entertaining large groups attending your wedding!
+        </p>
+        <div class="center">
+        <a href="weddings.html">
+          <div class="card bg-primary text-white margin-bot">
+            <div class="card-body">Click for more info!</div>
+          </div>
+        </a>
+        </div>
+      </div>
+      <div class="col-lg-6 aboutText">
+        <img class="img-fluid" src="img\wedding\8.png" alt="About1">
+      </div>
+    </div>
+    </div>
+    <!--WEDDINGS-->
     <!--================ Start Area =================-->
     <section class="blog-post-area section-margin mt-4">
       <div class="container">
