--- a/contact.html
+++ b/contact.html
@@ -218,11 +218,11 @@
             </div>
             <div class="form-group">
               <input type="email" name="visitor_email" class="form-control" placeholder="Your Email *" value=""
-                required />
+                required maxlength="30"/>
             </div>
             <div class="form-group">
               <input name="visitor_phone" class="form-control" placeholder="Your Phone Number ex: 814823546" value=""
-                required />
+                required maxlength="11"/>
             </div>
             <div class="form-group">
               <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
@@ -230,8 +230,8 @@
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <textarea name="visitor_message" class="form-control" placeholder="Your Message *"
-                style="width: 100%; height: 150px;" required></textarea>
+              <textarea name="visitor_message" class="form-control" placeholder="Your Message (500 characters max)"
+                style="width: 100%; height: 150px;" required maxlength="500"></textarea>
             </div>
           </div>
         </div>
@@ -315,7 +315,7 @@
       document.getElementById("button1").disabled = true;
     });
     </script>
-  
+
     <script>
       function enableBtn(){
         document.getElementById("button1").disabled = false;
