--- a/amenities.html
+++ b/amenities.html
@@ -217,11 +217,11 @@
                 <div class="row">
                     <div class="offset-md-2 col-md-4 marginTop quotes">
                         <img class="borders" src="img\amenitiest2\icons8-washing-machine-50.png">
-                        <span class="textCap">Washer and dryer</span>
+                        <span class="textCap">Washer and Dryer</span>
                     </div>
                     <div class="offset-md-2 col-md-4 marginTop quotes">
                         <img class="borders" src="img\amenitiest2\icons8-wine-glass-50.png">
-                        <span class="textCap">Bar area</span>
+                        <span class="textCap">Bar Area</span>
                     </div>
                 </div>
 
@@ -232,14 +232,14 @@
                     </div>
                     <div class="offset-md-2 col-md-4 marginTop quotes">
                         <img class="borders" src="img\amenitiest2\icons8-corgi-50.png">
-                        <span class="textCap">Pet friendly</span>
+                        <span class="textCap">Pet Friendly</span>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="offset-md-2 col-md-4 marginTop quotes">
                         <img class="borders" src="img\amenitiest2\icons8-garage-50.png">
-                        <span class="textCap">Free parking</span>
+                        <span class="textCap">Free Parking</span>
                     </div>
                     <div class="offset-md-2 col-md-4 marginTop quotes">
                         <img class="borders" src="img\amenitiest2\icons8-air-conditioner-50.png">
@@ -254,7 +254,7 @@
                     </div>
                     <div class="offset-md-2 col-md-4 marginTop quotes">
                         <img class="borders" src="img\amenitiest2\icons8-grill-50.png">
-                        <span class="textCap">Patio with gas grill</span>
+                        <span class="textCap">Patio with Gas Grill</span>
                     </div>
                 </div>
 
@@ -282,7 +282,7 @@
                 <div class="row quotes">
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-fridge-50.png">
-                        <span class="textCap">Two refrigerators</span>
+                        <span class="textCap">Two Refrigerators</span>
                     </div>
                 </div>
             </div>
@@ -297,18 +297,18 @@
                 <div class="row quotes">
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-toilet-bowl-50.png">
-                        <span class="textCap">Two bathrooms</span>
+                        <span class="textCap">Two Bathrooms</span>
                     </div>
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-towel-50.png">
-                        <span class="textCap">towels</span>
+                        <span class="textCap">Towels</span>
                     </div>
                 </div>
 
                 <div class="row quotes">
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-dispenser-50.png">
-                        <span class="textCap">shampoo</span>
+                        <span class="textCap">Shampoo</span>
                     </div>
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-soap-dispenser-50.png">
@@ -319,7 +319,7 @@
                 <div class="row quotes">
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-toilet-paper-50.png">
-                        <span class="textCap">Toilet paper</span>
+                        <span class="textCap">Toilet Paper</span>
                     </div>
                     <div class="offset-md-2 col-md-4 marginTop">
                         <img class="borders" src="img\amenitiest2\icons8-hair-dryer-50.png">
