--- a/index.html
+++ b/index.html
@@ -412,13 +412,13 @@
                         type="email">
                     </div>
                   </div>
-                  <div id="captchaWarn">
+                  <!--<div id="captchaWarn">
                     <p>Please complete the captcha first</p>
                   </div>
                   <div id="captchaComplete">
                     <p>Captcha completed!</p>
-                  </div>
-                  <button id="button2" type="submit" value="Submit" class="click-btn bbtns d-block mt-20 w-100">Subcribe</button>
+                  </div>-->
+                  <button id="button2" type="submit" value="Submit" class="click-btn bbtns d-block mt-20 w-100">Subscribe</button>
                   <div class="captchaWrap">
                     <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"
                       data-callback="enableBtn"></div>
