--- a/index3.html
+++ b/index3.html
@@ -408,7 +408,7 @@
                         type="email">
                     </div>
                   </div>
-                  <button id="button2" type="submit" value="Submit" class="click-btn bbtns d-block mt-20 w-100">Subcribe</button>
+                  <button id="button2" type="submit" value="Submit" class="click-btn bbtns d-block mt-20 w-100">Subscribe</button>
                   <div class="captchaWrap">
                     <div class="g-recaptcha" data-sitekey="6LejnaoUAAAAAPqilM3ED-jsPYX1gFNU7iPJ_guu"
                       data-callback="enableBtn"></div>
