UT bug fixes 3 and contact form polishing

--- a/testimonials.html
+++ b/testimonials.html
@@ -103,6 +103,7 @@
         .cursive {
             font-family: 'Courgette', cursive;
             font-size: 24px;
+            color: #3a3c4e;
         }
 
         .name {
@@ -131,6 +132,9 @@
 
         .captchaWrap {
             padding-top: 2em;
+        }
+        .testTitle{
+          color: #000000;
         }
     </style>
 </head>
@@ -193,7 +197,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Testimonials</h1>
+                    <h1 class="testTitle">Testimonials</h1>
                 </div>
             </div>
 
@@ -234,7 +238,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p class="cursive">
-                        We had such a lovely time visiting the lodge. We had several families stay and everyone
+                        "We had such a lovely time visiting the lodge. We had several families stay and everyone
                         raved about how fun it was to all stay together in one space. The fire pit and deck space
                         gave us lots of room to spread out. The kitchen was well-stocked, and there were plenty of
                         towels and extra sheets. It was great to have two refrigerators and so many coolers outside.
@@ -242,7 +246,7 @@
                         indicative of the thought that went into designing the cabin space. Parking was plentiful.
                         At night, the outdoor space is really magical with twinkling lights in the trees and a huge
                         fire pit that sat a dozen people. We will definitely stay again, and perhaps next time get a
-                        chance to explore the creek some more. Thank you Powers family!
+                        chance to explore the creek some more. Thank you Powers family!"
                     </p>
                     <p class="cursive name">Stephanie A.</p>
                 </div>
@@ -251,14 +255,14 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p class="cursive">
-                        We had a bachelor party weekend with 13 guys. The property could not have been more perfect.
+                        "We had a bachelor party weekend with 13 guys. The property could not have been more perfect.
                         More than enough room for a group of that size. The property had a large well stocked kitchen,
                         plenty of towels and bed linens, 3 large TVs, and the cabin (indoors and outdoors) was wired
                         with speakers. The outdoor area had a large deck (perfect for playing cornhole) and a large
                         firepit. Another excellent feature was a large parking lot. We had no issues getting Uber and
                         Lift rides down to State College. Michael and Justine the owners were great hosts, very easy
                         to get ahold of for questions and very accommodating. Our group will certainly be making a
-                        return visit to the property.
+                        return visit to the property."
                     </p>
                     <p class="cursive name">Chris P.</p>
                 </div>
@@ -267,7 +271,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p class="cursive">
-                        What a find! The house was setup to have a perfect bachelor party weekend for my little
+                        "What a find! The house was setup to have a perfect bachelor party weekend for my little
                         brother (a Penn State alumni). We had 12 guys there and everyone was super comfortable.
                         The kitchen was filled with all the pots and pans I needed to cook for the gang and it
                         even had a crock pot (or three!) that I could make a chili in! And the setup of the house
@@ -276,7 +280,7 @@
                         nights so we were able to make a great fire in the truly enormous fire pit. We were out
                         there until very late without disturbing anyone, so the location is great! I'd recommend
                         this house to anyone, in fact we are looking at our calendars right now to maybe book another
-                        weekend there (this time during football season!).
+                        weekend there (this time during football season!)."
                     </p>
                     <p class="cursive name">Glenn C.</p>
                 </div>
